Fixed layout shifts and misalignments on desktop screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -183,18 +183,21 @@ textarea {
 
 .main-view {
   padding-top: 10vh;
-  margin-left: 15vw;
-  width: 85vw;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 115px;
+  width: calc(100vw - 115px);
 }
 
 .side-bar {
   height: 100vh;
-  width: 15vw;
+  width: 115px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   position: fixed;
   padding-top: 10vh;
+  padding-left: 5px;
   padding-bottom: 10vh;
   backdrop-filter: blur(10px);
 }
@@ -1028,14 +1031,16 @@ fieldset {
   column-gap: 0px;
   grid-template-columns: 60% 40%;
   place-content: center;
+  width: 100%;
 }
 
 .car-technical {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 3px;
   width: 100%;
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 
 .car-media {
@@ -1079,7 +1084,7 @@ fieldset {
 }
 
 .main-img-control {
-  width: 90%;
+  width: 100%;
 }
 
 .main-img-control:hover {
@@ -1267,6 +1272,8 @@ fieldset {
 
 .car-description {
   margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .car-interests > h4 {
@@ -1558,12 +1565,13 @@ fieldset {
   }
 
   .car-media {
-    width: 88vw;
+    grid-row: 1/2;
+    grid-column: 1/3;
   }
 
   .car-media .main-img {
-    width: 88vw;
-    grid-template-columns: 2vw 84vw 2vw;
+    width: 100%;
+    grid-template-columns: 5% 90% 5%;
   }
 
   .car-media .main-img {
@@ -1571,10 +1579,9 @@ fieldset {
   }
 
   #specs {
-    height: 600px;
     position: relative;
     top: 29px;
-    right: 27px;
+    right: 50px;
   }
 }
 
